add fx700 run scripts
Signed-off-by: Michael Hennecke <michael.hennecke@intel.com>

--- a/io500/isc23/riken/fx700/95-daos-net.conf
+++ b/io500/isc23/riken/fx700/95-daos-net.conf
@@ -1,4 +1,3 @@
-
 #
 # DAOS settings for multiple interfaces per host (same subnet)
 #
@@ -15,23 +14,13 @@ net.ipv4.conf.ib1.rp_filter = 2
 net.ipv4.conf.ib1.arp_announce = 0
 net.ipv4.conf.ib1.arp_filter = 0
 
-#
-# DAOS coredump configuration
-#
-
-kernel.core_pattern = /var/daos/core.%e.%p.%h.%t
-fs.suid_dumpable = 2
-
-#
-# DAOS settings from daos/utils/rpms/10-daos_server.conf
-# (using DSS-G below instead for rmem* ...)
+# DAOS settings for SPDK (using network settings below instead...)
 #
 #net.core.rmem_default = 1048576
 #net.core.rmem_max = 1048576
-vm.max_map_count=1000000
 
 #
-# network settings from DSS-G
+# other network settings
 #
 
 net.core.netdev_max_backlog = 250000
@@ -40,9 +29,7 @@ net.core.wmem_max = 16777216
 net.core.rmem_default = 16777216
 net.core.wmem_default = 16777216
 net.core.optmem_max = 16777216
-
-# SLES 15.4 default seems to be 4096
-#net.core.somaxconn = 1024
+net.core.somaxconn = 1024
 
 net.ipv4.neigh.default.gc_thresh1 = 1024
 net.ipv4.neigh.default.gc_thresh2 = 4096
